--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header class="header slider-fade">
         <div class="owl-carousel owl-theme">
             <!-- Slider 1: Main Hero -->
-            <div class="text-center item bg-img" data-overlay-dark="5" data-background="../img/cglimg/sigiriya.jpg">
+            <div class="text-center item bg-img" data-overlay-dark="5" data-background="img/cglimg/sigiriya-1.webp">
                 <div class="v-middle caption">
                     <div class="container">
                         <div class="row">
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <!-- Slider 2: Beaches -->
-            <div class="text-center item bg-img" data-overlay-dark="5" data-background="img/slider/beach.jpg">
+            <div class="text-center item bg-img" data-overlay-dark="5" data-background="img/cglimg/beaches.jpg">
                 <div class="v-middle caption">
                     <div class="container">
                         <div class="row">
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <!-- Slider 3: Culture -->
-            <div class="text-center item bg-img" data-overlay-dark="5" data-background="img/slider/culture.jpg">
+            <div class="text-center item bg-img" data-overlay-dark="5" data-background="img/cglimg/culture.jpg">
                 <div class="v-middle caption">
                     <div class="container">
                         <div class="row">
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <!-- Slider 4: Wildlife -->
-            <div class="text-center item bg-img" data-overlay-dark="5" data-background="img/slider/wildlife.jpg">
+            <div class="text-center item bg-img" data-overlay-dark="5" data-background="img/cglimg/wildlife.webp">
                 <div class="v-middle caption">
                     <div class="container">
                         <div class="row">
